tests/should-fail/typing/no_such_interface.fk
semi : x -> y -> y.
semi x y = y.

main : [Console,Abort]Bool.
{- Fails because Abort interface is not defined. -}
main = semi (putStrLn "Hello") false.
